--- a/Config/polybar/workspace.ini
+++ b/Config/polybar/workspace.ini
@@ -378,11 +378,11 @@ format-padding = 0
 
 ;label-active = ""
 label-active = "∙ "
-label-active-foreground = ${color.blue}
+label-active-foreground = ${color.red}
 label-active-background = ${color.bg}
 
 label-occupied = "%icon% "
-label-occupied-foreground = ${color.white}
+label-occupied-foreground = ${color.orange}
 label-occupied-background = ${color.bg}
 
 label-urgent = "%icon% "
