--- a/Config/polybar/current.ini
+++ b/Config/polybar/current.ini
@@ -134,7 +134,7 @@ font-3 = "Source Code Pro:size=10;3"
 font-5 = "Helvetica Rounded:style=Bold:size=10.5;3"
 font-4 = "Montserrat Medium:style=Medium:size=12;3"
 font-6 = "Hurmit Nerd Font Mono:style=medium:pixelsize=17;3"
-font-7 = "Hack Nerd Font Mono:size20;5"
+font-7 = "Hack Nerd Font Mono:size=30;6"
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
 ;   modules-center = xwindow xbacklight
@@ -194,6 +194,57 @@ module-margin-right = 0
 modules-center = date 
 wm-restack = bspwm
 
+[bar/ethernet_bar]
+inherit = bar/main
+width = 10%
+height = 40
+offset-x = 3.8%
+offset-y = 15
+background = ${color.bg}
+foreground = ${color.white}
+bottom = false
+padding = 1
+;padding-top = 2
+module-margin-left = 0
+module-margin-right = 0
+;modules-left = date sep mpd
+modules-center = ethernet_status 
+wm-restack = bspwm
+
+[bar/htb_bar]
+inherit = bar/main
+width = 12%
+height = 40
+offset-x = 14.05%
+offset-y = 15
+background = ${color.bg}
+foreground = ${color.white}
+bottom = false
+padding = 1
+;padding-top = 2
+module-margin-left = 0
+module-margin-right = 0
+;modules-left = date sep mpd
+modules-center = htb_status 
+wm-restack = bspwm
+
+[bar/htb_target_bar]
+inherit = bar/main
+width = 17%
+height = 40
+offset-x = 79.6%
+offset-y = 15
+background = ${color.bg}
+foreground = ${color.white}
+bottom = false
+padding = 1
+;padding-top = 2
+module-margin-left = 0
+module-margin-right = 0
+;modules-left = date sep mpd
+modules-center = htb_target_status 
+wm-restack = bspwm
+
 [bar/log]
 inherit = bar/main
 width = 2.5%
@@ -202,7 +253,7 @@ offset-x = 1%
 offset-y = 15
 bottom = false
 foreground = ${color.white}
-background = #80bfff
+background = ${color.bg}
 padding = 0
 modules-center = my-text-label
 wm-restack = bspwm
@@ -394,6 +445,26 @@ pseudo-transparency = false
 ;;	/_/  /_/\____/\__,_/\__,_/_/\___/____/  
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+;; Custom modules
+
+[module/ethernet_status]
+type = custom/scripts
+internal = 2
+exec = ~/.config/bin/ethernet_status.sh
+
+[module/htb_status]
+type = custom/scripts
+internal = 2
+exec = ~/.config/bin/htb_status.sh
+
+[module/htb_target_status]
+type = custom/scripts
+internal = 2
+exec = ~/.config/bin/htb_target.sh
+
+;; Modules
+
 [module/my-text-label]
 type = custom/text
 content = %{T7}󰣙 
