--- a/Config/polybar/current.ini
+++ b/Config/polybar/current.ini
@@ -449,17 +449,17 @@ pseudo-transparency = false
 ;; Custom modules
 
 [module/ethernet_status]
-type = custom/scripts
+type = custom/script
 internal = 2
 exec = ~/.config/bin/ethernet_status.sh
 
 [module/htb_status]
-type = custom/scripts
+type = custom/script
 internal = 2
 exec = ~/.config/bin/htb_status.sh
 
 [module/htb_target_status]
-type = custom/scripts
+type = custom/script
 internal = 2
 exec = ~/.config/bin/htb_target.sh
 
