--- a/Config/polybar/current.ini
+++ b/Config/polybar/current.ini
@@ -459,7 +459,7 @@ internal = 2
 exec = ~/.config/bin/htb_status.sh
 
 [module/htb_target_status]
-type = custom/script
+type = custom/script 9
 internal = 2
 exec = ~/.config/bin/htb_target.sh
 
