--- a/Config/polybar/current.ini
+++ b/Config/polybar/current.ini
@@ -242,7 +242,7 @@ padding = 1
 module-margin-left = 0
 module-margin-right = 0
 ;modules-left = date sep mpd
-modules-center = htb_target_status 
+modules-center = htb_target_status
 wm-restack = bspwm
 
 [bar/log]
@@ -459,7 +459,7 @@ internal = 2
 exec = ~/.config/bin/htb_status.sh
 
 [module/htb_target_status]
-type = custom/script 9
+type = custom/script
 internal = 2
 exec = ~/.config/bin/htb_target.sh
 
