--- a/Config/polybar/workspace.ini
+++ b/Config/polybar/workspace.ini
@@ -382,7 +382,7 @@ label-active-foreground = ${color.red}
 label-active-background = ${color.bg}
 
 label-occupied = "%icon% "
-label-occupied-foreground = ${color.orange}
+label-occupied-foreground = ${color.yellow}
 label-occupied-background = ${color.bg}
 
 label-urgent = "%icon% "
