--- a/Config/polybar/config.ini
+++ b/Config/polybar/config.ini
@@ -1,12 +1,10 @@
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-;;
-;;	    ____        __      __              
-;;	   / __ \____  / /_  __/ /_  ____ ______
-;;	  / /_/ / __ \/ / / / / __ \/ __ `/ ___/
-;;	 / ____/ /_/ / / /_/ / /_/ / /_/ / /    
-;;	/_/    \____/_/\__, /_.___/\__,_/_/     
-;;	              /____/                    
-;;
+;; ┌────────────────────────────────────────────────────────────┐
+;; │░█▀█░█▀█░█░░░█░█░█▀▄░█▀█░█▀▄░░░░░░░░░█▀▀░█▀█░█▀█░█▀▀░▀█▀░█▀▀│
+;; │░█▀▀░█░█░█░░░░█░░█▀▄░█▀█░█▀▄░░░░▀░░░░█░░░█░█░█░█░█▀▀░░█░░█░█│
+;; │░▀░░░▀▀▀░▀▀▀░░▀░░▀▀░░▀░▀░▀░▀░░░░▀░░░░▀▀▀░▀▀▀░▀░▀░▀░░░▀▀▀░▀▀▀│
+;; │░Created░By░Aditya░Shakya░@adi1090x░░░░░░░░░░░░░░░░░░░░░░░░░│
+;; └────────────────────────────────────────────────────────────┘
+
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ;; Global WM Settings
@@ -25,7 +23,10 @@ margin-top = 0
 ;; File Inclusion
 ; include an external file, like module file, etc.
 
-include-file = ~/.config/polybar/colors.ini
+include-file = ~/.config/polybar/forest/bars.ini
+include-file = ~/.config/polybar/forest/colors.ini
+include-file = ~/.config/polybar/forest/modules.ini
+include-file = ~/.config/polybar/forest/user_modules.ini
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -47,10 +48,10 @@ monitor-strict = false
 
 ; Tell the Window Manager not to configure the window.
 ; Use this to detach the bar if your WM is locking its size/position.
-;override-redirect = true
+override-redirect = false
 
 ; Put the bar at the bottom of the screen
-;bottom = true
+bottom = false
 
 ; Prefer fixed center position for the `modules-center` block
 ; When false, the center position will be based on the size of the other blocks.
@@ -59,21 +60,21 @@ fixed-center = true
 ; Dimension defined as pixel value (e.g. 35) or percentage (e.g. 50%),
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
-width = 18%
+width = 100%
 height = 40
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in an offset in the x or y direction 
 ; of 50% minus 10 pixels
-offset-x = 20
-offset-y = 20
+offset-x = 0%
+offset-y = 0%
 
 ; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
-background = ${color.bg}
-;background = #A7D6FD
+background = ${color.background}
+
 ; Foreground ARGB color (e.g. #f00, #ff992a, #ddff1023)
-foreground = ${color.fg}
+foreground = ${color.foreground}
 
 ; Background gradient (vertical steps)
 ;   background-[0-9]+ = #aarrggbb
@@ -84,15 +85,15 @@ foreground = ${color.fg}
 ; doesn't get rounded
 ; Individual top/bottom values can be defined using:
 ;   radius-{top,bottom}
-radius-top = 10.0
-radius-bottom = 10.0
+radius-top = 0.0
+radius-bottom = 0.0
 
 ; Under-/overline pixel size and argb color
 ; Individual values can be defined using:
 ;   {overline,underline}-size
 ;   {overline,underline}-color
-line-size = 2
-line-color = ${color.ac}
+line-size = 0
+line-color = ${color.background}
 
 ; Values applied to all borders
 ; Individual side values can be defined using:
@@ -105,8 +106,8 @@ line-color = ${color.ac}
 ; the border is placed withing this area. So you effectively only have the
 ; following horizontal space on the bar:
 ;   width - border-right-size - border-left-size
-border-size = 0
-border-color = ${color.bg}
+border-bottom-size = 0
+border-bottom-color = ${color.foreground}
 
 ; Number of spaces to add at the beginning/end of the bar
 ; Individual side values can be defined using:
@@ -117,7 +118,9 @@ padding = 2
 ; Individual side values can be defined using:
 ;   module-margin-{left,right}
 module-margin-left = 1
-module-margin-right = 1
+module-margin-right = 0
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ; Fonts are defined using <font-name>;<vertical-offset>
 ; Font names are specified using a fontconfig pattern.
@@ -127,70 +130,24 @@ module-margin-right = 1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Iosevka Nerd Font:size=18;5"
-font-1 = "Iosevka Nerd Font:size=12;2"
-font-2 = "Iosevka Nerd Font:bold:size=24;2"
+font-0 = "Iosevka Nerd Font:size=11;4"
+font-1 = "Iosevka Nerd Font:size=11;3"
+font-2 = "feather:size=12;3"
+font-3 = "Hack Nerd Font Mono:size=25;6"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-;; Available modules
-;;
-;alsa backlight battery
-;bspwm cpu date
-;filesystem github i3
-;subscriber demo memory
-;menu-apps mpd wired-network
-;wireless-network network pulseaudio
-;name_you_want temperature my-text-label
-;backlight keyboard title workspaces 
-;;
-;; User modules
-;checknetwork updates window_switch launcher powermenu sysmenu menu
-;;
-;; Bars
-;cpu_bar memory_bar filesystem_bar mpd_bar 
-;volume brightness battery_bar 
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[bar/primary]
-inherit = bar/main
-
-override-redirect = true
-wm-restack = bspwm
-offset-x = 41%
-offset-y = 15
-bottom = false
-padding = 1
-module-margin-left = 0
-module-margin-right = 0
-
+modules-left = launcher sep ethernet_status sep htb_status sep cpu memory filesystem
 modules-center = workspaces
-
-[bar/secondary]
-inherit = bar/main
-offset-x = 30
-offset-y = 70
-background = ${color.trans}
-foreground = ${color.white}
-
-padding = 1
-module-margin-left = 0
-module-margin-right = 0
-
-modules-left = name sep title
+modules-right = target_status sep sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ; The separator will be inserted between the output of each module
-separator =
-
-; This value is used to add extra spacing between elements
-; @deprecated: This parameter will be removed in an upcoming version
-spacing = 0
+separator = 
 
 ; Opacity value between 0.0 and 1.0 used on fade in/out
 dim-value = 1.0
@@ -199,7 +156,7 @@ dim-value = 1.0
 ; If the value is empty or undefined, the atom value
 ; will be created from the following template: polybar-[BAR]_[MONITOR]
 ; NOTE: The placeholders are not available for custom values
-wm-name = openbox
+wm-name = 
 
 ; Locale used to localize various module data (e.g. date)
 ; Expects a valid libc locale, for example: sv_SE.UTF-8
@@ -223,17 +180,11 @@ tray-detached = false
 ; Tray icon max size
 tray-maxsize = 16
 
-; DEPRECATED! Since 3.3.0 the tray always uses pseudo-transparency
-; Enable pseudo transparency
-; Will automatically be enabled if a fully transparent
-; background color is defined using `tray-background`
-tray-transparent = false
-
 ; Background color for the tray container 
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
 ; By default the tray container will use the bar
 ; background color.
-tray-background = ${color.bg}
+tray-background = ${color.background}
 
 ; Tray offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 tray-offset-x = 0
@@ -254,7 +205,7 @@ tray-scale = 1.0
 ; Currently supported WM's:
 ;   bspwm
 ;   i3 (requires: `override-redirect = true`)
-wm-restack = bspwm
+;;wm-restack =
 
 ; Set a DPI values used when rendering text
 ; This only affects scalable fonts
@@ -297,10 +248,6 @@ cursor-scroll =
 ;;scroll-up = i3-msg workspace next_on_output
 ;;scroll-down = i3-msg workspace prev_on_output
 
-;openbox
-;awesome
-;etc
-
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ;; Application Settings
@@ -318,7 +265,7 @@ throttle-output = 5
 throttle-output-for = 10
 
 ; Time in milliseconds that the input handler will wait between processing events
-throttle-input-for = 30
+;throttle-input-for = 30
 
 ; Reload upon receiving XCB_RANDR_SCREEN_CHANGE_NOTIFY events
 screenchange-reload = false
@@ -332,120 +279,17 @@ compositing-underline = over
 compositing-border = over
 
 ; Define fallback values used by all module formats
-format-foreground = 
-format-background = 
-format-underline =
-format-overline =
-format-spacing =
-format-padding =
-format-margin =
-format-offset =
+;format-foreground = 
+;format-background = 
+;format-underline =
+;format-overline =
+;format-spacing =
+;format-padding =
+;format-margin =
+;format-offset =
 
 ; Enables pseudo-transparency for the bar
 ; If set to true the bar can be transparent without a compositor.
 pseudo-transparency = false
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-;;
-;;	    __  ___          __      __         
-;;	   /  |/  /___  ____/ /_  __/ /__  _____
-;;	  / /|_/ / __ \/ __  / / / / / _ \/ ___/
-;;	 / /  / / /_/ / /_/ / /_/ / /  __(__  ) 
-;;	/_/  /_/\____/\__,_/\__,_/_/\___/____/  
-;;
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/workspaces]
-type = internal/xworkspaces
-
-pin-workspaces = true
-enable-click = true
-enable-scroll = true
-font-0 = Material Icons:style=Regular
-font-1 = FontAwesome5Free:style=Solid:pixelsize=10:antialias=false;3
-font-2 = FontAwesome5Brands:style=Solid:pixelsize=10:antialias=false;3
-;icon-0 = 1;
-icon-0 = 1;-
-icon-1 = 2;
-icon-2 = 3;
-icon-3 = 4;
-icon-4 = 5;
-;icon-default = 
-;icon-default = ─
-icon-default = ∙
-format = <label-state>
-format-padding = 0
-
-;label-active = ""
-label-active = "∙ "
-label-active-foreground = ${color.red}
-label-active-background = ${color.bg}
-
-label-occupied = "%icon% "
-label-occupied-foreground = ${color.yellow}
-label-occupied-background = ${color.bg}
-
-label-urgent = "%icon% "
-label-urgent-foreground = ${color.ac}
-label-urgent-background = ${color.bg}
-
-label-empty = "%icon% "
-label-empty-foreground = ${color.white}
-label-empty-background = ${color.bg}
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/name]
-type = internal/xworkspaces
-
-format = <label-state>
-format-foreground = ${color.fg}
-format-font = 3
-format-padding = 0
-
-label-active = "%name%"
-
-label-occupied = 
-label-urgent = 
-label-empty = 
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/title]
-type = internal/xwindow
-
-format = <label>
-format-foreground = ${color.fg}
-format-font = 2
-
-label = %title%
-label-maxlen = 20
-label-empty = Desktop
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/sep]
-type = custom/text
-content = " | "
-content-font = 2
-
-;;content-background = #000
-content-foreground = ${color.fg}
-;;content-padding = 4
-
-[module/sep2]
-type = custom/text
-content = "   "
-
-;;content-background = #000
-content-foreground = ${color.fg}
-;;content-padding = 4
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-;;	    __________  ______
-;;	   / ____/ __ \/ ____/
-;;	  / __/ / / / / /_    
-;;	 / /___/ /_/ / __/    
-;;	/_____/\____/_/       
-;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
