--- a/Config/polybar/current.ini
+++ b/Config/polybar/current.ini
@@ -1,11 +1,11 @@
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;
-;;	    ____        __      __              
-;;	   / __ \____  / /_  __/ /_  ____ ______
-;;	  / /_/ / __ \/ / / / / __ \/ __ `/ ___/
-;;	 / ____/ /_/ / / /_/ / /_/ / /_/ / /    
+;;	   ____        __      __              
+;;	  / __ \____  / /_  __/ /_  ____ ______
+;;	 / /_/ / __ \/ / / / / __ \/ __ `/ ___/
+;;	/ ____/ /_/ / / /_/ / /_/ / /_/ / /    
 ;;	/_/    \____/_/\__, /_.___/\__,_/_/     
-;;	              /____/                    
+;;	             /____/                    
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -176,9 +176,9 @@ foreground = #44abff
 modules-center = sysmenu
 wm-restack = bspwm
 
-[bar/ethenet_bar]
+[bar/ethernet_bar]
 inherit = bar/main
-width = 10%
+width = 15%
 height = 40
 offset-x = 3.8%
 offset-y = 15
@@ -190,14 +190,14 @@ padding = 1
 module-margin-left = 0
 module-margin-right = 0
 ;modules-left = date sep mpd
-modules-center = ethenet_status 
+modules-center = ethernet_status 
 wm-restack = bspwm
 
 [bar/vpn_bar]
 inherit = bar/main
-width = 10%
+width = 15%
 height = 40
-offset-x = 14.08%
+offset-x = 19.1%
 offset-y = 15
 background = ${color.bg}
 foreground = ${color.white}
@@ -437,10 +437,10 @@ pseudo-transparency = false
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;
-;;	    __  ___          __      __         
-;;	   /  |/  /___  ____/ /_  __/ /__  _____
-;;	  / /|_/ / __ \/ __  / / / / / _ \/ ___/
-;;	 / /  / / /_/ / /_/ / /_/ / /  __(__  ) 
+;;	   __  ___          __      __         
+;;	  /  |/  /___  ____/ /_  __/ /__  _____
+;;	 / /|_/ / __ \/ __  / / / / / _ \/ ___/
+;;	/ /  / / /_/ / /_/ / /_/ / /  __(__  ) 
 ;;	/_/  /_/\____/\__,_/\__,_/_/\___/____/  
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -650,26 +650,29 @@ content = 襤
 ;content-foreground = ${color.white}
 click-left = ~/.config/polybar/scripts/powermenu_alt
 
-[module/ethenet_status]
-type = custom/scripts
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+; Custom Modules
+
+[module/ethernet_status]
+type = custom/script
 interval = 2
 exec = ~/.config/bspwm/scripts/ethernet_status.sh
 
 [module/vpn_status]
-type = custom/scripts
+type = custom/script
 interval = 2
 exec = ~/.config/bspwm/scripts/vpn_status.sh
 
 [module/victim_to_hack]
-type = custom/scripts
+type = custom/script
 interval = 2
 exec = ~/.config/bspwm/scripts/target_to_hack.sh
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-;;	    __________  ______
-;;	   / ____/ __ \/ ____/
-;;	  / __/ / / / / /_    
-;;	 / /___/ /_/ / __/    
+;;	   __________  ______
+;;	  / ____/ __ \/ ____/
+;;	 / __/ / / / / /_    
+;;	/ /___/ /_/ / __/    
 ;;	/_____/\____/_/       
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
